--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "htec-task-news_app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://newsapi.org/v2",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -13,6 +14,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.1.0"
   },
   "lint-staged": {
